--- a/latotale/encouragement.html
+++ b/latotale/encouragement.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Robot</title>
+        <title>Etu Assistance | Encouragements</title>
 
         <!-- CSS -->
 
@@ -90,28 +90,16 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="title-box">
-                            <h2 class="title">Welcom to our <span>Robot Factory</span></h2>
-                            <a href="#" class="btn btn-default btn-robot">view products</a>
+                            <h2 class="title">Tu as besoin de soutient ?<span> - Des services existent pour toi !</span></h2>
+                            <a href="https://www.u-bordeaux.fr/Campus/Espace-sante-etudiants" class="btn btn-default btn-robot">Espace Santé Etudiants</a>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-4">
-                        <div class="porduct-box">
-                            <img class="img-responsive" src="assets/images/product-1.jpg" alt="product">
-                            <h3 class="product-title">Space robot</h3>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="porduct-box">
-                            <img class="img-responsive" src="assets/images/product-2.jpg" alt="product">
-                            <h3 class="product-title">Sports robot</h3>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="porduct-box">
-                            <img class="img-responsive" src="assets/images/product-3.jpg" alt="product">
-                            <h3 class="product-title">Toy for kids</h3>
+                    <div class="col-sm-12">
+                        <div class="title-box">
+                            <h2 class="title">Un coup de mou ?<span> - Voilà de quoi te motiver</span></h2>
+                            <a href="https://www.youtube.com/watch?v=x_pHJxjhYDY&list=PLx8rEJfqq0hJbTklrWYhv1wfohNp4rQCP&index=1" class="btn btn-default btn-robot">Playlist De Motivation</a>
                         </div>
                     </div>
                 </div>
@@ -152,8 +140,8 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="title-box">
-                            <p>Our media</p>
-                            <h2 class="title mt0">Partner</h2>
+                            <p>Nos sponsors et</p>
+                            <h2 class="title mt0">Partenaires</h2>
                         </div>
                     </div>
                 </div>
@@ -162,40 +150,25 @@
                        <div class="col-sm-12">
                            <div id="partner-slider" class="owl-carousel">
                                 <div class="item">
-                                    <img src="assets/images/6.png" alt="partner">
+                                    <img src="assets/images/LogoCrous.jpg" alt="partner">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/images/7.png" alt="partner">
+                                    <img src="assets/images/Logo-Investir_l'avenir-2018.png" alt="partner">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/images/8.png" alt="partner">
+                                    <img src="assets/images/LogoRegionA-R-A.png" alt="partner">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/images/9.png" alt="partner">
+                                    <img src="assets/images/LogoUGrenobleAlpes.png" alt="partner">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/images/6.png" alt="partner">
+                                    <img src="assets/images/LogoOVHCloud.png" alt="partner">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/images/7.png" alt="partner">
+                                    <img src="assets/images/LogoViveris.png" alt="partner">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/images/8.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/9.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/6.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/7.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/8.png" alt="partner">
-                                </div>
-                                <div class="item">
-                                    <img src="assets/images/9.png" alt="partner">
+                                    <img src="assets/images/Logo-Programmez.png" alt="partner">
                                 </div>
                             </div>
                        </div>
